Add: index.html e style.css

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1 id="logo">dev.finances</h1>
     </header>
 
-    <main>
+    <main class="container">
         <section id="balance">
             <h2>Balanço</h2>
 
@@ -27,12 +27,12 @@
 
             <div class="card">
                 <h3>Saidas</h3>
-                <p>R$ 5.000,00</p>
+                <p>R$ 2.000,00</p>
             </div>
 
-            <div class="card">
+            <div class="card total">
                 <h3>Total</h3>
-                <p>R$ 5.000,00</p>
+                <p>R$ 3.000,00</p>
             </div>
         </section>
 
@@ -49,26 +49,26 @@
 
                 <tbody>
                     <tr>
-                        <td>Luz</td>
-                        <td>-R$500,00</td>
-                        <td>23/01/2021</td>
+                        <td class="description">Luz</td>
+                        <td class="expense">-R$500,00</td>
+                        <td class="date">23/01/2021</td>
                     </tr>
                     <tr>
-                        <td>Criação Website</td>
-                        <td>R$5.000,00</td>
-                        <td>24/01/2021</td>
+                        <td class="description">Criação Website</td>
+                        <td class="income">R$5.000,00</td>
+                        <td class="date">24/01/2021</td>
                     </tr>
                     <tr>
-                        <td>Internet</td>
-                        <td>R$200,00</td>
-                        <td>26/01/2021</td>
+                        <td class="description">Internet</td>
+                        <td class="expense">-R$200,00</td>
+                        <td class="date">26/01/2021</td>
                     </tr>
                 </tbody>
             </table>
         </section>
     </main>
     <footer>
-        <p>finances</p>
+        <p>dev.finances</p>
     </footer>
 
 </body>
